k8s/ingress/app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: app
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: app-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: 192.168.179.50.nip.io
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8099
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 6060
